--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -26,6 +26,9 @@
         android:layout_marginBottom="90dp"
         android:clickable="true"
         android:focusable="true"
+        app:srcCompat="@drawable/baseline_add_24"
+        app:tint="@color/black"
         app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
         app:layout_constraintEnd_toEndOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
