--- a/app/src/main/res/layout/my_row2.xml
+++ b/app/src/main/res/layout/my_row2.xml
@@ -12,28 +12,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="260dp">
-
-            <ProgressBar
-                android:id="@+id/progressbar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:visibility="visible"
-                app:layout_constraintBottom_toBottomOf="@+id/thumbnail_input_img"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/thumbnail_input_img" />
-
-            <ImageView
-                android:id="@+id/thumbnail_input_img"
-                android:layout_width="0dp"
-                android:layout_height="180dp"
-                android:scaleType="centerCrop"
-                app:layout_constraintBottom_toTopOf="@+id/news_id_txt"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
+            android:layout_height="wrap_content">
             <TextView
                 android:id="@+id/news_id_txt"
                 android:layout_width="wrap_content"
@@ -41,9 +20,10 @@
                 android:text="TextView"
                 android:textSize="40sp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@+id/news_title_txt"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/thumbnail_input_img" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="1.0" />
 
             <TextView
                 android:id="@+id/news_title_txt"
@@ -51,7 +31,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:text="TextView"
-                android:textSize="20sp"
+                android:textSize="20dp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toEndOf="@+id/news_id_txt"
                 app:layout_constraintTop_toTopOf="@+id/news_id_txt" />
@@ -60,11 +40,10 @@
                 android:id="@+id/news_sc_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textSize="16dp"
                 android:text="TextView"
-                android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="@+id/news_title_txt"
                 app:layout_constraintTop_toBottomOf="@+id/news_title_txt" />
-
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
