--- a/app/src/main/res/layout/activity_add_category.xml
+++ b/app/src/main/res/layout/activity_add_category.xml
@@ -8,20 +8,14 @@
     tools:context=".AddCategoryActivity">
 
     <EditText
-        android:id="@+id/title_input"
+        android:id="@+id/name_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Title" />
-
-    <EditText
-        android:id="@+id/content_input"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Content" />
+        android:hint="Name" />
 
     <Button
-        android:id="@+id/createNews_button"
+        android:id="@+id/create_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Create News" />
+        android:text="Create" />
 </LinearLayout>
