--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -38,7 +38,7 @@
                 android:drawableStart="@drawable/baseline_lock_24"
                 android:drawablePadding="8dp"
                 android:fontFamily="@font/inter"
-                android:hint="@string/password"
+                android:hint="Mật khẩu"
                 android:inputType="textPassword"
                 android:padding="15dp"
                 android:textSize="13sp" />
@@ -51,7 +51,7 @@
                 android:padding="10dp"
                 android:background="@drawable/mybutton"
                 android:fontFamily="@font/inter_extrabold"
-                android:text="@string/sign_in"
+                android:text="Đăng nhập"
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 android:radius="50dp"
@@ -67,7 +67,7 @@
                 android:layout_marginTop="20dp"
                 android:fontFamily="@font/inter"
                 android:padding="8dp"
-                android:text="@string/not_yet_registered_sign_up"
+                android:text="Chưa có tài khoản? Đăng kí tại đây"
                 android:textColor="@color/red77"
                 android:textSize="12sp" />
         </LinearLayout>
