--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -42,6 +42,12 @@
                 android:layout_height="wrap_content"
                 android:textSize="24sp"
                 android:padding="8dp"/>
+            <TextView
+                android:id="@+id/date"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:padding="8dp"/>
 
 
             <!-- Nội dung bài viết -->
