--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -25,13 +25,13 @@
         android:hint="Category ID"
         android:inputType="number" />
 
-    <EditText
-        android:id="@+id/thumbnail_input"
+    <ImageView
+        android:id="@+id/thumbnail_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Thumbnail"
-        android:focusable="false"
-        android:clickable="false" />
+        android:layout_height="200dp"
+        android:scaleType="centerCrop"
+        android:contentDescription="Selected Thumbnail"
+        android:layout_marginBottom="8dp"/>
 
     <Button
         android:id="@+id/selectThumbnail_button"
