26-12-2024 sua lại giao dien cho dep nhé pu

--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -1,3 +1,7 @@
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -12,18 +16,16 @@
         android:hint="Title" />
 
     <EditText
+        android:id="@+id/shortDescription_input"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Short Description" />
+    <EditText
         android:id="@+id/content_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Content"
         android:minLines="5"/>
-
-    <EditText
-        android:id="@+id/categoryId_input"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Category ID"
-        android:inputType="number" />
 
     <ImageView
         android:id="@+id/thumbnail_view"
@@ -41,13 +43,15 @@
         android:minLines="2"/>
 
     <EditText
-        android:id="@+id/shortDescription_input"
+        android:id="@+id/categoryId_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Short Description" />
+        android:hint="Category ID"
+        android:inputType="number" />
     <Button
         android:id="@+id/createNews_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Create News" />
 </LinearLayout>
+</ScrollView>
