--- a/app/src/main/res/layout/my_row.xml
+++ b/app/src/main/res/layout/my_row.xml
@@ -39,8 +39,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="TextView"
-                android:textSize="40sp"
+                android:textSize="1sp"
                 android:textStyle="bold"
+                android:visibility="invisible"
                 app:layout_constraintBottom_toTopOf="@+id/news_title_txt"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/thumbnail_input_img" />
@@ -54,7 +55,8 @@
                 android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toEndOf="@+id/news_id_txt"
-                app:layout_constraintTop_toTopOf="@+id/news_id_txt" />
+                app:layout_constraintTop_toTopOf="@+id/news_id_txt"
+                android:maxLines="1"/>
 
             <TextView
                 android:id="@+id/news_sc_txt"
@@ -63,7 +65,8 @@
                 android:text="TextView"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="@+id/news_title_txt"
-                app:layout_constraintTop_toBottomOf="@+id/news_title_txt" />
+                app:layout_constraintTop_toBottomOf="@+id/news_title_txt"
+                android:maxLines="2"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
