--- a/app/src/main/res/layout/my_row2.xml
+++ b/app/src/main/res/layout/my_row2.xml
@@ -20,6 +20,7 @@
                 android:text="TextView"
                 android:textSize="40sp"
                 android:textStyle="bold"
+                android:visibility="invisible"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -30,10 +31,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
+                android:maxLines="1"
                 android:text="TextView"
                 android:textSize="20dp"
                 android:textStyle="bold"
-                app:layout_constraintStart_toEndOf="@+id/news_id_txt"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/news_id_txt" />
 
             <TextView
@@ -43,7 +45,8 @@
                 android:textSize="16dp"
                 android:text="TextView"
                 app:layout_constraintStart_toStartOf="@+id/news_title_txt"
-                app:layout_constraintTop_toBottomOf="@+id/news_title_txt" />
+                app:layout_constraintTop_toBottomOf="@+id/news_title_txt"
+                android:maxLines="1"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
