--- a/app/src/main/res/layout/row_category.xml
+++ b/app/src/main/res/layout/row_category.xml
@@ -23,18 +23,18 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="1.0" />
+                app:layout_constraintVertical_bias="1.0"
+                android:visibility="invisible"/>
 
             <TextView
                 android:id="@+id/news_title_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
                 android:text="TextView"
                 android:textSize="20dp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/news_id_txt"
+                app:layout_constraintStart_toStartOf="@+id/news_id_txt"
                 app:layout_constraintTop_toTopOf="@+id/news_id_txt" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
