--- a/app/src/main/res/layout/row_category_manage.xml
+++ b/app/src/main/res/layout/row_category_manage.xml
@@ -29,13 +29,14 @@
                 android:id="@+id/news_title_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="104dp"
                 android:text="TextView"
                 android:textSize="20dp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/news_id_txt"
-                app:layout_constraintTop_toTopOf="@+id/news_id_txt" />
+                app:layout_constraintStart_toStartOf="@+id/news_id_txt"
+                app:layout_constraintTop_toTopOf="@+id/news_id_txt"
+                app:layout_constraintVertical_bias="0.615" />
 
             <ImageButton
                 android:id="@+id/del"
