--- a/app/src/main/res/layout/row_news_manage.xml
+++ b/app/src/main/res/layout/row_news_manage.xml
@@ -54,7 +54,8 @@
                 android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toEndOf="@+id/news_id_txt"
-                app:layout_constraintTop_toTopOf="@+id/news_id_txt" />
+                app:layout_constraintTop_toTopOf="@+id/news_id_txt"
+                android:maxLines="1"/>
 
             <TextView
                 android:id="@+id/news_sc_txt"
@@ -63,7 +64,8 @@
                 android:text="TextView"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="@+id/news_title_txt"
-                app:layout_constraintTop_toBottomOf="@+id/news_title_txt" />
+                app:layout_constraintTop_toBottomOf="@+id/news_title_txt"
+                android:maxLines="2"/>
 
             <ImageButton
                 android:id="@+id/del"
